<resources>
    <string name="GiftGenie">Gift Genie</string>
    <string name="default_web_client_id">116030471542-u5rt4qbecmiia6294bvt0c3hadsne3ol.apps.googleusercontent.com</string>
    <string name="app_name">Gift Genie</string>
    <string name="welcome_text">Gift Genie</string>
    <string name="tagline_text">Craft Moments That Matter</string>
    <string name="continue_button">Start Shopping</string>
    <string name="search_hint">Search Gifts</string>
    <string name="welcome_message">Discover Perfect Gifts</string>
    <string name="featured_gift_title">Special Gift Box</string>
    <string name="featured_gift_description">A curated selection of surprises for your loved ones.</string>
    <string name="explore_button">Explore Now</string>
    <string name="explore_button_description">Explore the featured gift</string>
    <string name="categories_title">Explore Categories</string>
    <string name="popular_gifts_title">Popular Gifts</string>
    <string name="home_scroll_description">Home screen content</string>
    <string name="categories_recycler_description">Gift Categories</string>
    <string name="popular_gifts_recycler_description">Popular Gifts</string>
    <string name="app_logo_description">Search Gifts\n</string>
        <string name="gift_image_description">Gift image</string>
        <string name="login_screen_description">Login screen</string>
        <string name="login_title">Sign In</string>
        <string name="username_hint">Username</string>
        <string name="password_hint">Password</string>
        <string name="forget_password">Forgot Password?</string>
        <string name="forget_password_description">Reset your password</string>
        <string name="sign_in_button">Sign In</string>
        <string name="sign_in_button_description">Sign in to your account</string>
        <string name="sign_up_prompt">Don’t have an account?</string>
        <string name="sign_up_link">Sign Up</string>
        <string name="sign_up_link_description">Navigate to sign up</string>
        <string name="registration_screen_description">Registration screen</string>
        <string name="register_title">Create Account</string>
        <string name="name_hint">Full Name</string>
        <string name="email_hint">Gmail Address</string>
        <string name="phone_hint">Phone Number</string>
        <string name="sign_up_button">Sign Up</string>
        <string name="sign_up_button_description">Create a new account</string>
    <string name="sign_in_prompt">Already have an account?</string>
    <string name="sign_in_link">Sign In</string>
    <string name="sign_in_link_description">Navigate to sign in</string>
    <string name="profile_screen_description">Profile screen</string>
    <string name="profile_title">My Profile</string>
    <string name="name_label">Name</string>
    <string name="name_description">User’s full name</string>
    <string name="username_label">Username</string>
    <string name="username_description">User’s username</string>
    <string name="phone_label">Phone Number</string>
    <string name="phone_description">User’s phone number</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_password_button_description">Change your password</string>
    <string name="shipping_address_title">Shipping Address</string>
    <string name="address_description">User’s shipping address</string>
    <string name="edit_profile_link">Edit Profile</string>
    <string name="edit_profile_link_description">Edit profile details</string>
    <string name="placeholder_name">Komal Jindal</string>
    <string name="placeholder_username">komaljindal16</string>
    <string name="placeholder_phone">1234567890</string>
    <string name="placeholder_address">78 Rosebank Drive, M1B 4S3 Toronto, ON</string>
    <string name="checkout_screen_description">Checkout screen</string>
    <string name="checkout_title">Checkout</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="subtotal_description">Order subtotal</string>
    <string name="tax_label">Tax</string>
    <string name="tax_description">Tax amount</string>
    <string name="other_charges_label">Other Charges</string>
    <string name="other_charges_description">Additional fees</string>
    <string name="total_label">Total</string>
    <string name="total_description">Total amount to pay</string>
    <string name="shipping_title">Shipping Details</string>
    <string name="payment_title">Payment Method</string>
    <string name="payment_method_description">Select payment method</string>
    <string name="confirm_payment_button">Confirm Payment</string>
    <string name="confirm_payment_button_description">Confirm and process payment</string>
    <string name="back_to_home_description">Navigate back to home</string>
</resources>