<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:fillViewport="true"
    android:contentDescription="@string/profile_screen_description">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="16dp">

      
        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/dark_burnt_sienna"
            android:animation="@anim/fade_in"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/user_details_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@android:color/transparent"
            android:animation="@anim/slide_up_subtle"
            app:layout_constraintTop_toBottomOf="@id/profile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/accessible_gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_name"
                    android:textSize="16sp"
                    android:textColor="@color/accessible_gray"
                    android:contentDescription="@string/name_description"
                    app:layout_constraintTop_toBottomOf="@id/name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/accessible_gray"
                    app:layout_constraintTop_toBottomOf="@id/name_value"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" />

               
                <TextView
                    android:id="@+id/username_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_username"
                    android:textSize="16sp"
                    android:textColor="@color/accessible_gray"
                    android:contentDescription="@string/username_description"
                    app:layout_constraintTop_toBottomOf="@id/username_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/accessible_gray"
                    app:layout_constraintTop_toBottomOf="@id/username_value"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/phone_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_phone"
                    android:textSize="16sp"
                    android:textColor="@color/accessible_gray"
                    android:contentDescription="@string/phone_description"
                    app:layout_constraintTop_toBottomOf="@id/phone_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

 
        <TextView
            android:id="@+id/change_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/dark_burnt_sienna"
            android:animation="@anim/fade_in"
            app:layout_constraintTop_toBottomOf="@id/user_details_card"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_password_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password_button"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/crimson_glow"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            android:animation="@anim/slide_up_subtle"
            app:layout_constraintTop_toBottomOf="@id/change_password_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/change_password_button_description" />

        <TextView
            android:id="@+id/shipping_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_address_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/dark_burnt_sienna"
            android:animation="@anim/fade_in"
            app:layout_constraintTop_toBottomOf="@id/change_password_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/shipping_address_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@android:color/transparent"
            android:animation="@anim/slide_up_subtle"
            app:layout_constraintTop_toBottomOf="@id/shipping_address_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

              
                <TextView
                    android:id="@+id/address_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_address"
                    android:textSize="16sp"
                    android:textColor="@color/accessible_gray"
                    android:contentDescription="@string/address_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

      
        <TextView
            android:id="@+id/edit_profile_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_link"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/crimson_glow"
            android:animation="@anim/fade_in"
            app:layout_constraintTop_toBottomOf="@id/shipping_address_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/edit_profile_link_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
